# loopster

./: .gitignore  AGENTS.md  LICENSE  README.md  codex_console.txt  codex_raw.txt  pyproject.toml  requirements.txt
loopster/: cli.py  config.py
loopster/capture/: ansi_clean.py  pipe_capture.py  pty_capture.py
loopster/llm/: __init__.py  analyzer.py  client.py  model_factory.py  summarizer.py
tests/: test_capture_tempfile.py  test_cli.py  test_cli_capture_out_alias.py  test_cli_capture_raw.py  test_cli_models.py  test_cli_run.py  test_cli_sanitize_and_invocation.py  test_cli_summarize.py  test_config.py  test_help_capture.py  test_module_entrypoint.py
tests/analyze/: test_analyzer.py  test_analyzer_prompt.py  test_colorize_diff.py
tests/capture/: test_ansi_clean.py  test_ansi_clean_more.py  test_ansi_clean_preserve_history.py  test_ansi_clean_row_tracking.py  test_ansi_sanitize_unit.py  test_capture_timeout.py  test_codex_console_match.py  test_pipe_capture.py  test_pipe_capture_interactive.py  test_pipe_capture_passthrough.py  test_pty_capture.py
tests/llm/: test_client.py
tests/summarize/: test_summarizer.py
