[project]
name = "loopster"
version = "1.0.0"
description = "Unified CLI to capture, analyze, and summarize AI assistant sessions"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Loopster" }]

[project.scripts]
loopster = "loopster.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["loopster*"]
